0032622: Draw Harness - writebrep "-version 3" is unrecognized

Fixed version range check.
Added description of -normals argument.